Removes visibility issues of creator guidelines about buttons

--- a/core/templates/pages/participation-playbook/playbook.component.css
+++ b/core/templates/pages/participation-playbook/playbook.component.css
@@ -23,6 +23,13 @@
 .playbook .oppia-about-buttons-container {
   text-align: center;
 }
+
+.oppia-about-button{
+  margin: 0 1rem;
+  background-color: #007066;
+  color: white;
+}
+
 .playbook .oppia-about-extra-info {
   background-color: #009788;
   color: #fff;
